--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,13 +1,115 @@
 <!Dctml>
     <head>
         <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        <style> {% block stylesheets %}{% endblock %} </style>
+        {% block title  %}
+            Nextipster
+        {% endblock %}
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+        <style> {% block stylesheets %}
+            body {
+                background-color:#f1f1f1;
+            }
+
+
+            .ulMenu {
+
+                list-style-type: none;
+                margin: 0;
+                padding: 0;
+                background-color: #333;
+                overflow: hidden;
+
+            }
+
+            {# écrit par Aurelie #}
+            .ulMenu li:hover .sous-menu1{
+                display: inline-block;
+                top: 100%;
+                left: 0px;
+                z-index: 100000;
+            }
+            {# écrit par Aurelie #}
+            .sous-menu1{
+                list-style-type: none;
+                display: none;
+            }
+            {# écrit par Aurelie #}
+            .sous-menu1{
+                border-bottom: 1px solid;
+            }
+            {# écrit par Aurelie #}
+            .sous-menu1 li a{
+                padding: 15px 30px;
+                font-size: 13px;
+                color: #677899;
+                width: 270px;
+            }
+
+            .menu {
+                float: left;
+                position: relative;
+            }
+
+            .menu a {
+                display : block;
+                color: white;
+                text-align: center;
+                padding: 14px 16px;
+                text-decoration: none;
+
+            }
+
+            .menu a:hover:not(.active) {
+                background-color: #111;
+            }
+
+            {% endblock %} </style>
     </head>
+
     <body>
-        {%  block header %}{% endblock %}
-        {% block body %}{% endblock %}
-        {% block footer %}{% endblock %}
+
+    {%  block header %}
+
+
+        <div style="border:1px solid; width:100%; height:15%;">
+            <img src="" alt="banniere">
+        </div>
+
+        <ul class="ulMenu">
+            <li class="menu"> <a> Acceuil </a></li>
+            <li class="menu"> <a>Pronostics du jour </a> </li>
+
+            <!--Aurelie vient de changer Classement Pronostiqueurs en Classements pour pouvoir créer un sous-menu-->
+
+            <li class="menu"> <a>Classements</a>
+                <ul class="sous-menu1">
+                    <li class="sous-menu"> <a href="{{ path('classementpronostiqueur') }}"> Classement Pronostiqueur </a> </li>
+                    <li class="sous-menu"> <a href="{{ path('classementclub') }}"> Classement Club  </a> </li>
+                </ul>
+            </li>
+        </ul>
+
+        <div class = "leftLogin">
+            a
+        </div>
+
+
+        <div id="slides">
+            <img src="" alt="slides">
+        </div>
+
+    {% endblock %}
+
+    {% block body %}{% endblock %}
+    {%  block footer %}
+
+        <div class="footer">
+            footer
+        </div>
+
+    {% endblock %}
     </body>
+
+
 </html>
 
