--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -14,7 +14,7 @@ Nextipster
             margin: 0;
             padding: 0;
             overflow: hidden;
-            background-color: #333;
+            background-color: blue;
         }
 
         .menu {
@@ -27,16 +27,23 @@ Nextipster
             text-align: center;
             padding: 14px 16px;
             text-decoration: none;
+            font-family:Calibri;
+            letter-spacing:0.3px;
+            font-weight:bold;
 
         }
 
         .menu a:hover:not(.active) {
-            background-color: #111;
+            background-color: #777DD7;
+        }
+
+        .menu #first{
+            margin-left:130px;
         }
 
         .leftLogin {
             height:100%;
-            width:10%;
+            width:15%;
             border: 1px solid black;
             float:left;
             margin-left:10%;
@@ -65,6 +72,15 @@ Nextipster
 
         h2{
             text-align: center;
+            font-family:Calibri;
+            font-size:33px;
+            color:#54423F;
+        }
+
+        .separator{
+            height:0.1px;
+            color:lightgray;
+            width:80%;
         }
 
         .ulMatch{
@@ -74,6 +90,8 @@ Nextipster
             list-style-type: none;
             padding: 0;
             overflow: hidden;
+            margin-left:200px;
+            margin-bottom:70px;
         }
         .match{
 
@@ -86,14 +104,34 @@ Nextipster
 
         .match a{
             display:block;
-            color:black;
-            text-align:center;
+            color:#54423F;
             height:100%;
-
+            background-color:white;
         }
 
         .match a:hover{
-            background-color:white;
+            background-color:lightgray;
+        }
+
+
+        .time{
+            margin-left:20px;
+        }
+
+        .team{
+            margin-left:30%;
+        }
+
+        .nbavis{
+            margin-left:30%;
+            border : solid 1px transparent ;
+            background-color: darkgray;
+            border-radius:3px;
+            color:white;
+            font-family:Calibri;
+            position:relative;
+            top:5px;
+            padding : 2px;
         }
 
         .headerMatch {
@@ -116,6 +154,15 @@ Nextipster
             position:absolute;
             bottom:0;
             background-color:gray;
+            text-align:center;
+        }
+
+
+        .footer a{
+            margin-left:15px;
+            margin-right:15px;
+             text-decoration:underline;
+            color:white;
         }
 
 {% endblock %}
@@ -124,13 +171,14 @@ Nextipster
 
 
     <div style="border:1px solid; width:100%; height:15%;">
-    <img src="" alt="banniere">
+    <img src="../public/imgs/banner.jpg" alt="banniere">
     </div>
 
     <ul class="ulMenu">
-        <li class="menu"> <a> Acceuil </a></li>
-        <li class="menu"> <a>Pronostics du jour </a> </li>
-        <li class="menu"> <a>Classement Pronostiqueurs</a></li>
+        <li class="menu"> <a id="first"> ACCEUIL </a></li>
+        <li class="menu"> <a>PRONOSTIC DU JOUR </a> </li>
+        <li class="menu"> <a> CLASSEMENT </a></li>
+        <li class="menu"> <a> HISTORIQUE </a></li>
     </ul>
 
     <div class = "leftLogin">
@@ -147,11 +195,19 @@ Nextipster
 {%  block body %}
 
     <div class="body">
-        <h2> Les matchs de la semaine </h2>
+        <h2> Matchs de la semaine </h2>
+        <hr class="separator"> <br />
+
         <ul class="ulMatch">
             <li class="headerMatch"> Champions League </li>
-            <li class="match"> <a> Paris - Réal </a> </li>
-            <li class="match"> <a> Barça - Juventus </a> </li>
+            <li class="match"><a> <span class="time">18:55</span> <span class="team">Paris - Réal</span>  <span class="nbAvis"> 5 Avis </span> </a></li>
+            <li class="match"><a>  <span class="time">14:00</span>  <span class="team"> Barça - Juventus </span>  </a> </li>
+        </ul>
+
+        <ul class="ulMatch">
+            <li class="headerMatch"> Ligue 1 </li>
+            <li class="match"><a> <span class="time">18:55</span> <span class="team">Paris - Réal</span>  <span class="nbAvis"> 5 Avis </span> </a></li>
+            <li class="match"><a>  <span class="time">14:00</span>  <span class="team"> Barça - Juventus </span>  </a> </li>
         </ul>
 
 
@@ -162,7 +218,12 @@ Nextipster
 {%  block footer %}
 
     <div class="footer">
-        footer
+        <p>NextTipster</p>
+        <a>Qui sommes nous ?</a>
+        <a>Nous contacter</a>
+        <a>Plan du site</a>
+        <a>Mentions légales</a>
+        <a>FAQ</a>
     </div>
 
 {% endblock %}
