--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,6 +3,8 @@
         <meta charset="UTF-8">
         <title>{% block title %}Welcome!{% endblock %}</title>
         <link rel="stylesheet" type="text/css" href="{{ asset('CSS/header.css') }}">
+        <link rel="stylesheet" type="text/css" href="{{ asset('CSS/left.css') }}">
+        <link rel="stylesheet" type="text/css" href="{{ asset('CSS/footer.css') }}">
          {% block stylesheets %}{% endblock %}
     </head>
 
@@ -28,7 +30,40 @@
     </header>
 
     <div class = "leftLogin">
-        a
+    <br /> <br />
+        <h4> Top User </h4>
+        <ul class="ulFirstUser">
+            <li id="FirstUser">
+                <span id="nbUser"> 1 </span>
+                <img alt="photoUser">
+                <span id="nameUser"> MehdiStl</span>
+            </li>
+
+            <li>
+                <span id="nbUser"> 2 </span>
+                <img alt="photoUser">
+                <span id="nameUser"> MehdiStl</span>
+            </li>
+
+            <li>
+                <span id="nbUser"> 3 </span>
+                <img alt="photoUser">
+                <span id="nameUser"> MehdiStl</span>
+            </li>
+
+            <li>
+                <span id="nbUser"> 4 </span>
+                <img alt="photoUser">
+                <span id="nameUser"> MehdiStl</span>
+            </li>
+
+            <li id="LastUser">
+                <span id="nbUser"> 5 </span>
+                <img alt="photoUser">
+                <span id="nameUser"> MehdiStl</span>
+            </li>
+
+        </ul>
     </div>
 
     <div class="body">
