--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -20,8 +20,8 @@
             <li class="menu"> <a href="dayprono">PRONOSTIC DU JOUR </a> </li>
             <li class="dropdown"> <a> CLASSEMENT </a>
                 <div class="dropdown-content">
-                    <a href="classement/pronostiqueur">Pronostiqueur</a>
-                    <a href="classement/equipe">Equipes</a>
+                    <a href="{{ path('classementpronostiqueur') }}">Pronostiqueur</a>
+                    <a href="{{ path('classementclub') }}">Equipes</a>
                 </div>
             </li>
             <li class="menu"> <a href="historique"> HISTORIQUE </a></li>
