--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -12,7 +12,7 @@
 
     <header>
         <div id="banner">
-            <img src="banner.jpg" alt="banniere">
+            <img src="C:\Users\YRSL\PhpstormProjects/stade.jpg" alt="banniere">
         </div>
 
         <ul class="ulMenu">
