--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -19,8 +19,8 @@ Nextipster
 
         <ul class="ulMatch">
             <li class="headerMatch"> Champions League </li>
-            <li class="match"><a> <span class="time">18:55</span> <span class="team">Paris - Réal</span>  <span class="nbAvis"> 5 Avis </span> </a></li>
-            <li class="match"><a>  <span class="time">14:00</span>  <span class="team"> Barça - Juventus </span>  </a> </li>
+            <li class="match"><a href="{{ path('Analyse') }}"> <span class="time">18:55</span> <span class="team">Paris - Réal</span>  <span class="nbAvis"> 5 Avis </span> </a></li>
+            <li class="match"><a href="{{ path('Analyse') }}">  <span class="time">14:00</span>  <span class="team"> Barça - Juventus </span>  </a> </li>
         </ul>
 
         <ul class="ulMatch">
