--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -30,6 +30,8 @@
     </header>
 
     <div class = "leftLogin">
+
+        {{form(form)}}
     <br /> <br />
         <h4> Top User </h4>
         <ul class="ulFirstUser">
