pagination et systeme de recherche des equipes

--- a/templates/Classement/ClassementClub.html.twig
+++ b/templates/Classement/ClassementClub.html.twig
@@ -59,6 +59,10 @@
         </table>
     </div>
 
+    <div class="pagination">
+        {{ knp_pagination_render(clubs) }}
+    </div>
+
 {% endblock %}
 
 
