--- a/public/CSS/footer.css
+++ b/public/CSS/footer.css
@@ -4,7 +4,7 @@ footer{
     bottom:0;
     left:0;
     right:0;
-    padding:0;
+    padding-bottom:0px ;
     background-color:gray;
     text-align:center;
 }
