--- a/templates/dayprono.html.twig
+++ b/templates/dayprono.html.twig
@@ -15,7 +15,7 @@
 
     <hr class="separator">
     <ul>
-    {% for v in Vote %}
+    {% for v in vote %}
 
                         <li>
                             <p class="detailMatch"> m.datetime</p>
@@ -28,13 +28,13 @@
 
                             <div class="cote">
 
-                                              <span class="activeCote">v.vote1</span>
+                                              <span class="activeCote">{{   v.Vote1 }} </span>
 
 
-                                                 <span class="otherCote">v.VoteN</span>
+                                                 <span class="otherCote">V.VoteN</span>
 
 
-                                                    <span class="otherCote">v.vote2</span> </div>
+                                                    <span class="otherCote">V.vote2</span> </div>
 
 
 
