mise à jour de la bdd

--- a/templates/Classement/ClassementClub.html.twig
+++ b/templates/Classement/ClassementClub.html.twig
@@ -45,7 +45,7 @@
                 {% set p = p + 1 %}
                 <tr>
                     <td> {{ p }}</td>
-                    <td> {{ c.Nom }} </td>
+                    <td> {{ c.NomEquipe }} </td>
                     <td> {{ c.points }} </td>
                     <td> {{ c.nbMatchJoue }} </td>
                     <td> {{ c.nbMatchGagne}} </td>
