--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -74,11 +74,11 @@
 
     <footer>
         <p>NextTipster</p>
-        <a>Qui sommes nous ?</a>
-        <a>Nous contacter</a>
-        <a>Plan du site</a>
-        <a>Mentions légales</a>
-        <a>FAQ</a>
+        <a href="{{ path('info') }}" >Qui sommes nous ?</a>
+        <a href="{{ path('contacte') }}">Nous contacter</a>
+        <a href="{{ path('plan') }}">Plan du site</a>
+        <a href="{{ path('mention') }}">Mentions légales</a>
+        <a href="{{ path('FAQ') }}">FAQ </a>
     </footer>
 
     </body>
