--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -31,7 +31,11 @@
 
     <div class = "leftLogin">
 
-        {{form(form)}}
+        <h4> {% block titleForm %} {%  endblock %} </h4>
+        {% block form %} {% endblock %}
+
+        {%  block register %}{% endblock %}
+
     <br /> <br />
         <h4> Top User </h4>
         <ul class="ulFirstUser">
