--- a/templates/Home/dayprono.html.twig
+++ b/templates/Home/dayprono.html.twig
@@ -14,37 +14,26 @@
     <h2> Pronostic du jour </h2>
 
     <hr class="separator">
+    {% for j in jeu %}
+        <ul>
+            <li>
 
-    <ul>
-        <li>
-            <p class="detailMatch"> 17:30 à Parc des princes</p>
-            <p class="teamMatch"> Paris Saint Germains - Olympique Lyonnais </p>
-            <div class="result">
-                <button class="activeButton"> 1 </button>
-                <button class="otherButton" disabled> N </button>
-                <button class="otherButton" disabled> 2 </button>
-            </div>
+                <p class="detailMatch"> {{ j.heure|date('H:i:s') }} {{ j.date|date('Y-m-d') }} à {{ j.Lieu }}</p>
+                <p class="teamMatch"> {{ j.getIdEquipe1().NomEquipe }} -- {{ j.getIdEquipe2().NomEquipe }} </p>
+                <div class="result">
+                    <button class="activeButton"> 1 </button>
+                    <button class="otherButton" disabled> N </button>
+                    <button class="otherButton" disabled> 2 </button>
+                </div>
 
-            <div class="cote">
-                <span class="activeCote">1.30</span>
-                <span class="otherCote">3.40</span>
-                <span class="otherCote">3.75</span> </div>
-        </li>
+                <div class="cote">
+                    <span class="activeCote">1.30</span>
+                    <span class="otherCote">3.40</span>
+                    <span class="otherCote">3.75</span> </div>
+            </li>
 
-        <li>
-            <p class="detailMatch"> 17:30 à Barcelone Stadium</p>
-            <p class="teamMatch"> FC Barcelone - Villaréal </p>
-            <div class="result">
-                <button class="activeButton"> 1 </button>
-                <button class="otherButton" disabled> N </button>
-                <button class="otherButton" disabled> 2 </button>
-            </div>
 
-            <div class="cote">
-                <span class="activeCote">1.30</span>
-                <span class="otherCote">3.40</span>
-                <span class="otherCote">3.75</span> </div>
-        </li>
-    </ul>
+        </ul>
+    {% endfor %}
 
 {% endblock %}
