--- a/templates/base2.html.twig
+++ b/templates/base2.html.twig
@@ -34,35 +34,15 @@
     <br /> <br />
     <h4> Top User </h4>
     <ul class="ulFirstUser">
-        <li id="FirstUser">
-            <span id="nbUser"> 1 </span>
-            <img alt="photoUser">
-            <span id="nameUser"> MehdiStl</span>
-        </li>
-
-        <li>
-            <span id="nbUser"> 2 </span>
-            <img alt="photoUser">
-            <span id="nameUser"> MehdiStl</span>
-        </li>
-
-        <li>
-            <span id="nbUser"> 3 </span>
-            <img alt="photoUser">
-            <span id="nameUser"> MehdiStl</span>
-        </li>
-
-        <li>
-            <span id="nbUser"> 4 </span>
-            <img alt="photoUser">
-            <span id="nameUser"> MehdiStl</span>
-        </li>
-
-        <li id="LastUser">
-            <span id="nbUser"> 5 </span>
-            <img alt="photoUser">
-            <span id="nameUser"> MehdiStl</span>
-        </li>
+        {% set n=0 %}
+        {% for pro in pronostiqueurs5 %}
+            {% set n = n+1 %}
+            <li id="FirstUser">
+                <span id="nbUser"> {{ n }} </span>
+                <img alt="photoUser">
+                <span id="nameUser"> {{ pro.Prenom~" "~pro.Nom }}</span>
+            </li>
+        {% endfor %}
 
     </ul>
 </div>
@@ -75,12 +55,13 @@
 
 <footer>
     <p>NextTipster</p>
-    <a>Qui sommes nous ?</a>
-    <a>Nous contacter</a>
-    <a>Plan du site</a>
-    <a>Mentions légales</a>
-    <a>FAQ</a>
+    <a href="{{ path('info') }}" >Qui sommes nous ?</a>
+    <a href="{{ path('contacte') }}">Nous contacter</a>
+    <a href="{{ path('plan') }}">Plan du site</a>
+    <a href="{{ path('mention') }}">Mentions légales</a>
+
 </footer>
+
 
 </body>
 
